feat: Enhance dashboard with new metrics and navigation
Introduces new visual elements and interactivity to the dashboard.
- Adds new color palettes to `index.html` for improved styling.
- Updates `App.tsx` to correctly import `Dashboard` as a default export and set 'dashboard' as the initial view.
- Introduces several new icons in `components/icons/Icon.tsx` including `BarChart3Icon`, `LightbulbIcon`, `ClockIcon`, and `ZapIcon`.
- Refactors `components/Dashboard.tsx` to display new metrics like total leads, qualified leads, total estimated ROI, and average AI opportunity score.
- Enables navigation from the Dashboard to other views via a `setView` prop.
- Replaces `recharts` with custom components for displaying metrics and introduces new placeholder components for future chart implementations.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,25 @@
               'gray-600': '#4B5563',
               'gray-300': '#D1D5DB',
               'gray-100': '#F3F4F6',
+              // New colors for the dashboard
+              'slate-900': '#0F172A',
+              'slate-800': '#1E293B',
+              'slate-700': '#334155',
+              'purple-900': '#581C87',
+              'purple-600': '#9333EA',
+              'purple-500': '#A855F7',
+              'purple-400': '#C084FC',
+              'cyan-500': '#06B6D4',
+              'cyan-400': '#22D3EE',
+              'pink-600': '#DB2777',
+              'pink-500': '#EC4899',
+              'pink-400': '#F472B6',
+              'orange-500': '#F97316',
+              'orange-400': '#FB923C',
+              'green-500': '#22C55E',
+              'green-400': '#4ADE80',
+              'blue-500': '#3B82F6',
+              'blue-400': '#60A5FA',
             }
           }
         }
