--- a/index.html
+++ b/index.html
@@ -38,7 +38,21 @@
               'green-400': '#4ADE80',
               'blue-500': '#3B82F6',
               'blue-400': '#60A5FA',
-            }
+            },
+            keyframes: {
+              'fade-in': {
+                '0%': { opacity: '0' },
+                '100%': { opacity: '1' },
+              },
+              'slide-up': {
+                '0%': { transform: 'translateY(20px)', opacity: '0' },
+                '100%': { transform: 'translateY(0)', opacity: '1' },
+              },
+            },
+            animation: {
+              'fade-in': 'fade-in 0.3s ease-out forwards',
+              'slide-up': 'slide-up 0.4s ease-out forwards',
+            },
           }
         }
       }
